k8s/base_setup/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-public-front-end
  namespace: develop
  annotations:
    # SSl 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dev.skycom.vn
    secretName: letsencrypt-nginx-front-end-dev
  rules:
  - host: dev.skycom.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-end-web-service
            port:
              number: 80
## chỉ chạy lần đầu và thay đổi host cho từng tenant line 41 (p/s: gắn ip domain tới loadbanlencer)
