k8s/base_setup/ingress_prod.yml
apiVersion: v1
kind: Namespace
metadata:
  name: front-end
  labels:
    name: front-end
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-public-front-end
  namespace: front-end
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - habt.skycom.vn
    secretName: letsencrypt-nginx-han
  - hosts:
    - jp24.skycom.vn
    secretName: letsencrypt-nginx-jp
  - hosts:
    - zac.skycom.vn
    secretName: letsencrypt-nginx-zac
  - hosts:
    - misty.skycom.vn
    secretName: letsencrypt-nginx-misty
  - hosts:
    - ryusui.skycom.vn
    secretName: letsencrypt-nginx-ryusui
  rules:
  - host: habt.skycom.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-end-web-service-han
            port:
              number: 80
  - host: jp24.skycom.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-end-web-service-jp24
            port:
              number: 80
  - host: zac.skycom.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-end-web-service-zac
            port:
              number: 80
  - host: misty.skycom.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-end-web-service-misty
            port:
              number: 80
  - host: ryusui.skycom.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-end-web-service-ryusui
            port:
              number: 80
## chỉ chạy lần đầu và thay đổi host cho từng tenant line 41 (p/s: gắn ip domain tới loadbanlencer)uiu
